<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_nav_home"
            android:title="@string/nav_home"/>
        <item
            android:id="@+id/nav_e_book"
            android:icon="@drawable/ic_nav_e_book"
            android:title="@string/nav_e_book"/>
        <item
            android:id="@+id/nav_bookshelf"
            android:icon="@drawable/ic_nav_bookshelf"
            android:title="@string/nav_bookshelf"/>
        <item
            android:id="@+id/nav_tools"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/nav_tools"/>
    </group>

    <group android:checkableBehavior="single">
    <item android:title="@string/nav_communicate">
        <menu>
            <item
                android:id="@+id/nav_theme"
                android:icon="@drawable/ic_nav_theme"
                android:title="@string/nav_theme"
                app:actionLayout="@layout/nav_theme_switch"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@android:drawable/ic_menu_send"
                android:title="@string/nav_send"/>
        </menu>
    </item>
    </group>
</menu>